chore: resolve IDE code analysis warnings